# aircraftassistance

./: .env  README.md  init_pgvector.py  new_rag_pipeline.ipynb  pyproject.toml  rag_pipeline.ipynb  ragapp.py
